--- a/app/src/main/res/layout/activity_service.xml
+++ b/app/src/main/res/layout/activity_service.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
-        android:text="Choose a service"
+        android:text="@string/tv_cs"
         android:textColor="@color/app_blue"
         android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -28,7 +28,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
         android:background="@color/app_blue"
-        android:text="Distance unit converter "
+        android:text="@string/b_d"
         android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -45,7 +45,7 @@
         android:layout_marginTop="50dp"
         android:layout_marginEnd="16dp"
         android:background="@color/app_blue"
-        android:text="Weight unit converter "
+        android:text="@string/b_w"
         android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -62,7 +62,7 @@
         android:layout_marginTop="50dp"
         android:layout_marginEnd="16dp"
         android:background="@color/app_blue"
-        android:text="Time unit converter "
+        android:text="@string/b_t"
         android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -79,7 +79,7 @@
         android:layout_marginTop="50dp"
         android:layout_marginEnd="16dp"
         android:background="@color/app_blue"
-        android:text="Liquid product unit converter "
+        android:text="@string/b_lp"
         android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
