--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,6 +28,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
         android:text="@string/tv_w"
+        android:textAlignment="center"
         android:textColor="#070707"
         android:textSize="36sp"
         app:layout_constraintBottom_toBottomOf="parent"
