--- a/app/src/main/res/layout/activity_distance.xml
+++ b/app/src/main/res/layout/activity_distance.xml
@@ -14,6 +14,7 @@
         android:layout_marginTop="50dp"
         android:layout_marginEnd="16dp"
         android:text="@string/b_d"
+        android:textAlignment="center"
         android:textColor="@color/app_blue"
         android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -23,7 +24,7 @@
         app:layout_constraintVertical_bias="0.0" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/b_dc"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -41,7 +42,7 @@
         app:layout_constraintVertical_bias="0.0" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/b_dh"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -55,6 +56,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button"
+        app:layout_constraintTop_toBottomOf="@+id/b_dc"
         app:layout_constraintVertical_bias="0.0" />
 </androidx.constraintlayout.widget.ConstraintLayout>
